--- a/style1.css
+++ b/style1.css
@@ -39,8 +39,12 @@
     width: 40%;
     height: 40%;
     margin-bottom: 80px;
+    margin-top: 100px;
+
+
   }
   .img-2{
+    margin-top: 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
