--- a/style1.css
+++ b/style1.css
@@ -14,7 +14,7 @@
 .div-1 p{
     font-weight: lighter;
     text-align: center;
-    padding-left: 40px;
+    padding-left: 2em;
     padding-right: 40px;
     padding-top: 30px;
     padding-bottom: 20px;
