--- a/resp.css
+++ b/resp.css
@@ -1,4 +1,4 @@
-@media (max-width: 1231px) {
+@media only screen and (max-width: 600px) {
     .intro h1, .aboutme h1, .div-1 h1 {
         font-size: 1em;
         margin: auto;
