--- a/resp.css
+++ b/resp.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
     .intro h1, .aboutme h1, .div-1 h1 {
         font-size: 1em;
         margin: auto;
