--- a/resp.css
+++ b/resp.css
@@ -1,13 +1,29 @@
 @media screen and (max-width: 1200px) {
+   .intro{
+    padding: auto;
+    margin: auto;
+   }
+   .aboutme{
+    padding: auto;
+    margin: auto;
+   }
+   .div-1{
+    padding: auto;
+    margin: auto;
+   }
     .intro h1, .aboutme h1, .div-1 h1 {
         font-size: 2em;
         margin: auto;
         padding: auto;
     }
-    .aboutme p, .intro p, .div-1 p, .footer p {
+    .intro p, .div-1 p, .footer p {
         font-size: 1.3em;
         margin: auto;
         padding: auto;
+    }
+    .aboutme p{
+        font-size: 1em;
+        
     }
     .profile-image{
         max-width: 25%;
@@ -16,5 +32,11 @@
     }
     .navbar a{
      font-size: 2em;
+    }
+    .div-1 hr{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top:20px;
+        
     }
 }
